test/mlir/for_bad_case_1.mlir.stderr
test/mlir/for_bad_case_1.mlir:3:25: error: use of value '%ub' expects different type than prior uses: 'index' vs 'f32'
  colgm.for %i = %lb to %ub {
                        ^
test/mlir/for_bad_case_1.mlir:2:35: note: prior use here
func.func @bad_ub_f32(%lb: index, %ub: f32) {
                                  ^
